--- a/Resources/Prototypes/_CP14/Entities/Objects/Materials/simple.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Materials/simple.yml
@@ -175,7 +175,7 @@
       types:
         Heat: 1
   - type: Log
-    spawnedPrototype: CP14WoodenPlanks1
+    spawnedPrototype: CP14GlowingWoodenPlanks1
     spawnCount: 3
   - type: Appearance
   - type: Damageable
@@ -260,6 +260,78 @@
 - type: entity
   id: CP14WoodenPlanks10
   parent: CP14WoodenPlanks1
+  suffix: 10
+  components:
+  - type: Stack
+    count: 10
+
+- type: entity
+  id: CP14GlowingWoodenPlanks1
+  parent: BaseItem
+  name: glowing wooden planks
+  description: Treated and ready-to-use wood.
+  categories: [ ForkFiltered ]
+  suffix: 1
+  components:
+  - type: Item
+    size: Normal
+  - type: Sprite
+    sprite: _CP14/Objects/Materials/wood.rsi
+    layers:
+      - state: planks
+        map: ["base"]
+  - type: Tag
+    tags:
+    - CP14FireplaceFuel
+    - Wooden
+  - type: Flammable
+    fireSpread: false
+    canResistFire: false
+    alwaysCombustible: true
+    canExtinguish: true
+    cP14FireplaceFuel: 12
+    damage:
+      types:
+        Heat: 1
+  - type: Appearance
+  - type: FloorTile
+    placeTileSound:
+      path: /Audio/Effects/woodenclosetclose.ogg
+      params:
+        variation: 0.03
+        volume: 2
+    outputs:
+      - CP14FloorOakWoodPlanks # TODO
+  - type: Stack
+    stackType: CP14GlowingWoodenPlanks
+    count: 1
+    baseLayer: base
+    layerStates:
+    - planks
+    - planks_2
+    - planks_3
+  - type: Material
+  - type: PhysicalComposition # точно ли это нужно?
+    materialComposition:
+      CP14WoodenPlanks: 100
+  - type: Damageable
+    damageContainer: Inorganic
+    damageModifierSet: Wood
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 25
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: WoodDestroy
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+
+- type: entity
+  id: CP14GlowingWoodenPlanks10
+  parent: CP14GlowingWoodenPlanks1
   suffix: 10
   components:
   - type: Stack
