--- a/Resources/Prototypes/_CP14/audio_music.yml
+++ b/Resources/Prototypes/_CP14/audio_music.yml
@@ -71,6 +71,11 @@
 
 # Rules
 - type: rules
+  id: AlwaysTrue
+  rules:
+    - !type:AlwaysTrueRule
+
+- type: rules
   id: NearMagic
   rules:
     - !type:NearbyEntitiesRule
