--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/trees.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/trees.yml
@@ -15,7 +15,6 @@
   - type: Clickable
   - type: Sprite
     noRot: true
-    sprite: Objects/Decoration/Flora/flora_trees.rsi
     drawdepth: Mobs
     offset: 0,0.9
   - type: Physics
@@ -43,7 +42,7 @@
     - trigger:
         !type:DamageTypeTrigger
         damageType: Heat
-        damage: 100
+        damage: 50
       behaviors:
         - !type:DoActsBehavior
           acts: [ "Destruction" ]
@@ -82,7 +81,6 @@
   abstract: true
   components:
   - type: Sprite
-    sprite: Objects/Decoration/Flora/flora_treeslarge.rsi
     offset: 0,1.55
   - type: Fixtures
     fixtures:
@@ -128,84 +126,57 @@
 
 - type: entity
   parent: CP14BaseTree
-  id: CP14FloraTree01
+  id: CP14FloraTreeGreen
   components:
   - type: Sprite
-    state: tree01
+    sprite: Objects/Decoration/Flora/flora_trees.rsi
+    layers:
+    - state: tree01
+      map: ["random"]
+  - type: RandomSprite
+    available:
+    - random:
+        tree01: ""
+        tree02: ""
+        tree03: ""
+        tree04: ""
+        tree05: ""
+        tree06: ""
 
 - type: entity
   parent: CP14BaseTree
-  id: CP14FloraTree02
+  id: CP14FloraTreeSnow
   components:
   - type: Sprite
-    state: tree02
-
-- type: entity
-  parent: CP14BaseTree
-  id: CP14FloraTree03
-  components:
-  - type: Sprite
-    state: tree03
-
-- type: entity
-  parent: CP14BaseTree
-  id: CP14FloraTree04
-  components:
-  - type: Sprite
-    state: tree04
-
-- type: entity
-  parent: CP14BaseTree
-  id: CP14FloraTree05
-  components:
-  - type: Sprite
-    state: tree05
-
-- type: entity
-  parent: CP14BaseTree
-  id: CP14FloraTree06
-  components:
-  - type: Sprite
-    state: tree06
+    sprite: _CP14/Structures/Flora/snow_trees.rsi
+    layers:
+    - state: tree01
+      map: ["random"]
+  - type: RandomSprite
+    available:
+    - random:
+        tree01: ""
+        tree02: ""
+        tree03: ""
+        tree04: ""
+        tree05: ""
+        tree06: ""
 
 - type: entity
   parent: CP14BaseTreeLarge
-  id: CP14FloraTreeLarge01
+  id: CP14FloraTreeGreenLarge
   components:
   - type: Sprite
-    state: treelarge01
-
-- type: entity
-  parent: CP14BaseTreeLarge
-  id: CP14FloraTreeLarge02
-  components:
-  - type: Sprite
-    state: treelarge02
-
-- type: entity
-  parent: CP14BaseTreeLarge
-  id: CP14FloraTreeLarge03
-  components:
-  - type: Sprite
-    state: treelarge03
-
-- type: entity
-  parent: CP14BaseTreeLarge
-  id: CP14FloraTreeLarge04
-  components:
-  - type: Sprite
-    state: treelarge04
-
-- type: entity
-  parent: CP14BaseTreeLarge
-  id: CP14FloraTreeLarge05
-  components:
-  - type: Sprite
-    state: treelarge05
-
-- type: entity
-  parent: CP14BaseTreeLarge
-  id: CP14FloraTreeLarge06
-  components:
-  - type: Sprite
-    state: treelarge06
+    sprite: Objects/Decoration/Flora/flora_treeslarge.rsi
+    layers:
+    - state: treelarge01
+      map: ["random"]
+  - type: RandomSprite
+    available:
+    - random:
+        treelarge01: ""
+        treelarge02: ""
+        treelarge03: ""
+        treelarge04: ""
+        treelarge05: ""
+        treelarge06: ""
