--- a/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
@@ -23,6 +23,14 @@
   result: CP14GoldBar1
 
 - type: CP14Recipe
+  id: CP14MithrilBar1
+  tag: CP14RecipeMeltingFurnace
+  craftTime: 4
+  entities:
+    CP14OreMithril: 4
+  result: CP14MithrilBar1
+
+- type: CP14Recipe
   id: CP14GlassSheet1
   tag: CP14RecipeMeltingFurnace
   craftTime: 4
