--- a/Resources/Prototypes/_CP14/Entities/Objects/Materials/bars.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Materials/bars.yml
@@ -168,3 +168,44 @@
   components:
   - type: Stack
     count: 10
+
+- type: entity
+  id: CP14MithrilBar1
+  parent: BaseItem
+  name: mithril bar
+  description: A warm to the touch, soft piece of refined mithril.
+  categories: [ ForkFiltered ]
+  components:
+  - type: Item
+    size: Normal
+  - type: Sprite
+    sprite: _CP14/Objects/Materials/mithril_bar.rsi
+    layers:
+      - state: bar
+        map: ["base"]
+  - type: Appearance
+  - type: Stack
+    stackType: CP14MithrilBar
+    count: 1
+    baseLayer: base
+    layerStates:
+    - bar
+    - bar_2
+    - bar_3
+  - type: Material
+
+- type: entity
+  id: CP14MithrilBar5
+  parent: CP14MithrilBar1
+  suffix: 5
+  components:
+  - type: Stack
+    count: 5
+
+- type: entity
+  id: CP14MithrilBar10
+  parent: CP14MithrilBar1
+  suffix: 10
+  components:
+  - type: Stack
+    count: 10
