--- a/Resources/Prototypes/_CP14/Entities/Structures/dungeon_entrance.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/dungeon_entrance.yml
@@ -1,23 +1,21 @@
 - type: entity
-  id: CP14DungeonEntrance
+  id: CP14LaddersDownBase
   name: stairway down
-  categories: [ HideSpawnMenu ]
+  abstract: true
+  categories: [ ForkFiltered, HideSpawnMenu ]
   description: The dark depths of the underworld are calling you.
   placement:
     mode: SnapgridCenter
   components:
+  - type: Sprite
+    drawdepth: FloorTiles
+    sprite: /Textures/_CP14/Structures/Dungeon/ladders.rsi
   - type: Transform
     anchored: True
   - type: InteractionOutline
   - type: Clickable
   - type: Physics
     bodyType: Static
-  - type: Sprite
-    sprite: /Textures/_CP14/Structures/Dungeon/ladders.rsi
-    drawdepth: FloorTiles
-    layers:
-    - state: ladder
-    #- state: down
   - type: Fixtures
     fixtures:
       portalFixture:
@@ -34,18 +32,16 @@
     randomTeleport: false
 
 - type: entity
-  parent: CP14DungeonEntrance
-  id: CP14DungeonExit
+  parent: CP14LaddersDownBase
+  id: CP14LaddersUpBase
+  abstract: true
+  categories: [ ForkFiltered, HideSpawnMenu ]
   name: stairway up
-  categories: [ HideSpawnMenu ]
   description: A way out of the dark underworld into the overworld.
   components:
   - type: Sprite
     sprite: /Textures/_CP14/Structures/Dungeon/ladders_up.rsi
     drawdepth: Mobs
-    layers:
-    - state: ladder
-    #- state: top
   - type: Fixtures
     fixtures:
       portalFixture:
@@ -63,20 +59,113 @@
     energy: 1
     netsync: false
 
+
+# Basic stone
 - type: entity
-  parent: CP14DungeonEntrance
-  id: CP14DungeonEntranceAutoLink
-  categories: [ ForkFiltered ]
+  parent: CP14LaddersDownBase
+  id: CP14LaddersDownStone
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    state: stone
+
+- type: entity
+  parent: CP14LaddersUpBase
+  id: CP14LaddersUpStone
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    state: stone
+
+
+- type: entity
+  parent: CP14LaddersDownStone
+  id: CP14LaddersDownStoneAutoLink
+  suffix: Stone
   components:
   - type: CP14ZLevelAutoPortal
     zLevelOffset: -1 # Go into deep
-    otherSideProto: CP14DungeonExit
+    otherSideProto: CP14LaddersUpStone
 
 - type: entity
-  parent: CP14DungeonExit
-  id: CP14DungeonExitAutoLink
-  categories: [ ForkFiltered ]
+  parent: CP14LaddersUpStone
+  id: CP14LaddersUpStoneAutoLink
+  suffix: Stone
   components:
   - type: CP14ZLevelAutoPortal
     zLevelOffset: 1 # Go onto surface
-    otherSideProto: CP14DungeonEntrance
+    otherSideProto: CP14LaddersDownStone
+
+
+# Wood
+- type: entity
+  parent: CP14LaddersDownBase
+  id: CP14LaddersDownWood
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    state: wood
+
+- type: entity
+  parent: CP14LaddersUpBase
+  id: CP14LaddersUpWood
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    state: wood
+
+
+- type: entity
+  parent: CP14LaddersDownWood
+  id: CP14LaddersDownWoodAutoLink
+  suffix: Wood
+  components:
+  - type: CP14ZLevelAutoPortal
+    zLevelOffset: -1 # Go into deep
+    otherSideProto: CP14LaddersUpWood
+
+- type: entity
+  parent: CP14LaddersUpWood
+  id: CP14LaddersUpWoodAutoLink
+  suffix: Wood
+  components:
+  - type: CP14ZLevelAutoPortal
+    zLevelOffset: 1 # Go onto surface
+    otherSideProto: CP14LaddersDownWood
+
+
+# Wood
+- type: entity
+  parent: CP14LaddersDownBase
+  id: CP14LaddersDownMarble
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    state: marble
+
+- type: entity
+  parent: CP14LaddersUpBase
+  id: CP14LaddersUpMarble
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    state: marble
+
+
+- type: entity
+  parent: CP14LaddersDownMarble
+  id: CP14LaddersDownMarbleAutoLink
+  suffix: Marble
+  components:
+  - type: CP14ZLevelAutoPortal
+    zLevelOffset: -1 # Go into deep
+    otherSideProto: CP14LaddersUpMarble
+
+- type: entity
+  parent: CP14LaddersUpWood
+  id: CP14LaddersUpMarbleAutoLink
+  suffix: Marble
+  components:
+  - type: CP14ZLevelAutoPortal
+    zLevelOffset: 1 # Go onto surface
+    otherSideProto: CP14LaddersDownMarble
