--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/skeleton.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/skeleton.yml
@@ -1,6 +1,6 @@
 - type: entity
   parent: 
-  - BaseMobSpecies
+  - CP14BaseMobSpecies
   - MobFlammable
   id: CP14BaseMobSkeleton
   name: Mr. Skeleton
