--- a/Resources/Prototypes/_CP14/Tiles/woodplanks.yml
+++ b/Resources/Prototypes/_CP14/Tiles/woodplanks.yml
@@ -64,7 +64,7 @@
 
 - type: tile #Cruci
   editorHidden: false
-  id: CP14FloorRedWoodPlanksCruciform  
+  id: CP14FloorRedWoodPlanksCruciform
   name: cp14-tiles-red-woodplanks-cruciform
   sprite: /Textures/_CP14/Tiles/WoodPlanks/RedWood/red_woodplanks_cruciform.png
   variants: 4
@@ -92,7 +92,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
-    
+
 - type: tile #Stairways
   editorHidden: false
   id: CP14FloorRedWoodPlanksStairways
@@ -185,7 +185,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
-  
+
 - type: tile #Cruci
   editorHidden: false
   id: CP14FloorRedWoodPlanksCruciformBroken
@@ -215,7 +215,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
-  
+
 - type: tile #Stairways
   editorHidden: false
   id: CP14FloorRedWoodPlanksStairwaysBroken
@@ -316,7 +316,7 @@
 
 - type: tile #Cruci
   editorHidden: false
-  id: CP14FloorBirchWoodPlanksCruciform  
+  id: CP14FloorBirchWoodPlanksCruciform
   name: cp14-tiles-birch-woodplanks-cruciform
   sprite: /Textures/_CP14/Tiles/WoodPlanks/BirchWood/birch_woodplanks_cruciform.png
   variants: 4
@@ -344,7 +344,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
-    
+
 - type: tile #Stairways
   editorHidden: false
   id: CP14FloorBirchWoodPlanksStairways
@@ -437,7 +437,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
-  
+
 - type: tile #Cruci
   editorHidden: false
   id: CP14FloorBirchWoodPlanksCruciformBroken
@@ -467,7 +467,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
-  
+
 - type: tile #Stairways
   editorHidden: false
   id: CP14FloorBirchWoodPlanksStairwaysBroken
@@ -568,7 +568,7 @@
 
 - type: tile #Cruci
   editorHidden: false
-  id: CP14FloorOakWoodPlanksCruciform  
+  id: CP14FloorOakWoodPlanksCruciform
   name: cp14-tiles-oak-woodplanks-cruciform
   sprite: /Textures/_CP14/Tiles/WoodPlanks/OakWood/oak_woodplanks_cruciform.png
   variants: 4
@@ -596,7 +596,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
-    
+
 - type: tile #Stairways
   editorHidden: false
   id: CP14FloorOakWoodPlanksStairways
@@ -689,7 +689,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
-  
+
 - type: tile #Cruci
   editorHidden: false
   id: CP14FloorOakWoodPlanksCruciformBroken
@@ -719,7 +719,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
-  
+
 - type: tile #Stairways
   editorHidden: false
   id: CP14FloorOakWoodPlanksStairwaysBroken
@@ -820,7 +820,7 @@
 
 - type: tile #Cruci
   editorHidden: false
-  id: CP14FloorDarkWoodPlanksCruciform  
+  id: CP14FloorDarkWoodPlanksCruciform
   name: cp14-tiles-dark-woodplanks-cruciform
   sprite: /Textures/_CP14/Tiles/WoodPlanks/DarkWood/dark_woodplanks_cruciform.png
   variants: 4
@@ -848,7 +848,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
-    
+
 - type: tile #Stairways
   editorHidden: false
   id: CP14FloorDarkWoodPlanksStairways
@@ -941,7 +941,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
-  
+
 - type: tile #Cruci
   editorHidden: false
   id: CP14FloorDarkWoodPlanksCruciformBroken
@@ -971,7 +971,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
-  
+
 - type: tile #Stairways
   editorHidden: false
   id: CP14FloorDarkWoodPlanksStairwaysBroken
@@ -1072,7 +1072,7 @@
 
 - type: tile #Cruci
   editorHidden: false
-  id: CP14FloorAcaciaWoodPlanksCruciform  
+  id: CP14FloorAcaciaWoodPlanksCruciform
   name: cp14-tiles-acacia-woodplanks-cruciform
   sprite: /Textures/_CP14/Tiles/WoodPlanks/AcaciaWood/acacia_woodplanks_cruciform.png
   variants: 4
@@ -1100,7 +1100,7 @@
   itemDrop: CP14WoodenPlanks1
   weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
-    
+
 - type: tile #Stairways
   editorHidden: false
   id: CP14FloorAcaciaWoodPlanksStairways
@@ -1193,7 +1193,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksBigBurned
-  
+
 - type: tile #Cruci
   editorHidden: false
   id: CP14FloorAcaciaWoodPlanksCruciformBroken
@@ -1223,7 +1223,7 @@
   heatCapacity: 10000
   weather: true
   burnedTile: CP14FloorWoodPlanksCruciformBurned
-  
+
 - type: tile #Stairways
   editorHidden: false
   id: CP14FloorAcaciaWoodPlanksStairwaysBroken
@@ -1306,7 +1306,7 @@
   heatCapacity: 10000
   weather: true
   color: "#0d0906"
-  
+
 - type: tile #Cruci
   editorHidden: false
   id: CP14FloorWoodPlanksCruciformBurned
@@ -1330,7 +1330,7 @@
   heatCapacity: 10000
   weather: true
   color: "#0d0906"
-  
+
 - type: tile #Stairways
   editorHidden: false
   id: CP14FloorWoodPlanksStairwaysBurned
@@ -1356,3 +1356,249 @@
   color: "#0d0906"
 ### /BURNED
 
+### LUCENS
+- type: tile #Default
+  editorHidden: false
+  id: CP14FloorLucensWoodPlanks
+  name: cp14-tiles-lucens-woodplanks
+  sprite: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_woodplanks.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  edgeSpritePriority: 101
+  edgeSprites:
+    SouthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SE.png
+    NorthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NE.png
+    NorthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NW.png
+    SouthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SW.png
+    South: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_S.png
+    East: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_E.png
+    North: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_N.png
+    West: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_W.png
+  baseTurf: CP14FloorFoundation
+  deconstructTools: [ Prying ]
+  itemDrop: CP14WoodenPlanks1
+  isSubfloor: false
+  footstepSounds:
+    collection: FootstepWood
+  heatCapacity: 10000
+  weather: true
+  burnedTile: CP14FloorWoodPlanksBurned
+
+- type: tile #Big
+  editorHidden: false
+  id: CP14FloorLucensWoodPlanksBig
+  name: cp14-tiles-lucens-woodplanks-big
+  sprite: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_woodplanks_big.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  edgeSpritePriority: 101
+  edgeSprites:
+    SouthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SE.png
+    NorthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NE.png
+    NorthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NW.png
+    SouthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SW.png
+    South: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_S.png
+    East: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_E.png
+    North: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_N.png
+    West: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_W.png
+  baseTurf: CP14FloorFoundation
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  itemDrop: CP14WoodenPlanks1
+  footstepSounds:
+    collection: FootstepWood
+  heatCapacity: 10000
+  weather: true
+  burnedTile: CP14FloorWoodPlanksBigBurned
+
+- type: tile #Cruci
+  editorHidden: false
+  id: CP14FloorLucensWoodPlanksCruciform
+  name: cp14-tiles-lucens-woodplanks-cruciform
+  sprite: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_woodplanks_cruciform.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  edgeSpritePriority: 101
+  edgeSprites:
+    SouthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SE.png
+    NorthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NE.png
+    NorthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NW.png
+    SouthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SW.png
+    South: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_S.png
+    East: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_E.png
+    North: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_N.png
+    West: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_W.png
+  baseTurf: CP14FloorFoundation
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  itemDrop: CP14WoodenPlanks1
+  footstepSounds:
+    collection: FootstepWood
+  heatCapacity: 10000
+  weather: true
+  burnedTile: CP14FloorWoodPlanksCruciformBurned
+
+- type: tile #Stairways
+  editorHidden: false
+  id: CP14FloorLucensWoodPlanksStairways
+  name: cp14-tiles-lucens-woodplanks-stairways
+  sprite: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_woodplanks_stairways.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  edgeSpritePriority: 101
+  edgeSprites:
+    SouthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SE.png
+    NorthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NE.png
+    NorthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NW.png
+    SouthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SW.png
+    South: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_S.png
+    East: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_E.png
+    North: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_N.png
+    West: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_W.png
+  baseTurf: CP14FloorFoundation
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  itemDrop: CP14WoodenPlanks1
+  footstepSounds:
+    collection: FootstepWood
+  heatCapacity: 10000
+  weather: true
+  burnedTile: CP14FloorWoodPlanksStairwaysBurned
+
+#broken
+
+- type: tile #Default
+  editorHidden: false
+  id: CP14FloorLucensWoodPlanksBroken
+  name: cp14-tiles-lucens-woodplanks-broken
+  sprite: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_woodplanks_broken.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  edgeSpritePriority: 101
+  edgeSprites:
+    SouthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SE.png
+    NorthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NE.png
+    NorthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NW.png
+    SouthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SW.png
+    South: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_S.png
+    East: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_E.png
+    North: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_N.png
+    West: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_W.png
+  baseTurf: CP14FloorFoundation
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  heatCapacity: 10000
+  weather: true
+  burnedTile: CP14FloorWoodPlanksBurned
+
+- type: tile #Big
+  editorHidden: false
+  id: CP14FloorLucensWoodPlanksBigBroken
+  name: cp14-tiles-lucens-woodplanks-big-broken
+  sprite: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_woodplanks_big_broken.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  edgeSpritePriority: 101
+  edgeSprites:
+    SouthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SE.png
+    NorthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NE.png
+    NorthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NW.png
+    SouthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SW.png
+    South: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_S.png
+    East: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_E.png
+    North: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_N.png
+    West: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_W.png
+  baseTurf: CP14FloorFoundation
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  heatCapacity: 10000
+  weather: true
+  burnedTile: CP14FloorWoodPlanksBigBurned
+
+- type: tile #Cruci
+  editorHidden: false
+  id: CP14FloorLucensWoodPlanksCruciformBroken
+  name: cp14-tiles-lucens-woodplanks-cruciform-broken
+  sprite: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_woodplanks_cruciform_broken.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  edgeSpritePriority: 101
+  edgeSprites:
+    SouthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SE.png
+    NorthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NE.png
+    NorthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NW.png
+    SouthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SW.png
+    South: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_S.png
+    East: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_E.png
+    North: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_N.png
+    West: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_W.png
+  baseTurf: CP14FloorFoundation
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  heatCapacity: 10000
+  weather: true
+  burnedTile: CP14FloorWoodPlanksCruciformBurned
+
+- type: tile #Stairways
+  editorHidden: false
+  id: CP14FloorLucensWoodPlanksStairwaysBroken
+  name: cp14-tiles-lucens-woodplanks-stairways-broken
+  sprite: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_woodplanks_stairways_broken.png
+  variants: 4
+  placementVariants:
+  - 1.0
+  - 1.0
+  - 1.0
+  - 1.0
+  edgeSpritePriority: 101
+  edgeSprites:
+    SouthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SE.png
+    NorthEast: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NE.png
+    NorthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_NW.png
+    SouthWest: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_single_edge_SW.png
+    South: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_S.png
+    East: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_E.png
+    North: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_N.png
+    West: /Textures/_CP14/Tiles/WoodPlanks/LucensWood/lucens_double_edge_W.png
+  baseTurf: CP14FloorFoundation
+  isSubfloor: false
+  deconstructTools: [ Prying ]
+  footstepSounds:
+    collection: FootstepWood
+  heatCapacity: 10000
+  weather: true
+  burnedTile: CP14FloorWoodPlanksStairwaysBurned
